privacy updated to clarify data usage; OA site links fixed

--- a/terms/acceptable-use.html
+++ b/terms/acceptable-use.html
@@ -21,11 +21,11 @@
 <body>
 <p class="p1"><span class="s1"><b>ACCEPTABLE USE POLICY</b></span></p>
 <p class="p2"><span class="s1"></span><br></p>
-<p class="p3"><span class="s1"><b>Last updated</b> <b>March 20, 2024</b></span></p>
+<p class="p3"><span class="s1"><b>Last updated</b> <b>March 23, 2024</b></span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p2"><span class="s1"></span><br></p>
-<p class="p3"><span class="s1">This Acceptable Use Policy ('<b>Policy</b>') is part of our Terms of Service ('<b>Legal Terms</b>') and should therefore be read alongside our main Legal Terms: <a href="https://cloud.aws.oasisdefender.com/static/terms.html"><span class="s2">https://saas.oasisdefender.com/static/terms.html</span></a>. If you do not agree with these Legal Terms, please refrain from using our Services. Your continued use of our Services implies acceptance of these Legal Terms.</span></p>
+<p class="p3"><span class="s1">This Acceptable Use Policy ('<b>Policy</b>') is part of our Terms of Service ('<b>Legal Terms</b>') and should therefore be read alongside our main Legal Terms: <a href="https://saas.oasisdefender.com/static/terms.html"><span class="s2">https://saas.oasisdefender.com/static/terms.html</span></a>. If you do not agree with these Legal Terms, please refrain from using our Services. Your continued use of our Services implies acceptance of these Legal Terms.</span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1">Please carefully review this Policy which applies to any and all:</span></p>
 <p class="p2"><span class="s1"></span><br></p>
@@ -35,7 +35,7 @@
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p4"><span class="s1"><b>WHO WE ARE</b></span></p>
 <p class="p2"><span class="s1"></span><br></p>
-<p class="p3"><span class="s1">We are Bythos FZE, doing business as Oasis Defender ('<b>Company</b>','<b>we</b>', '<b>us</b>', or '<b>our</b>') a company registered in the United Arab Emirates at D-FLEX-G013D, Technohub, Dubai Silicon Oasis, Dubai, Dubai 0000. We operate the website <a href="https://cloud.aws.oasisdefender.com/"><span class="s2">https://saas.oasisdefender.com</span></a> (the '<b>Site</b>'), as well as any other related products and services that refer or link to this Policy (collectively, the '<b>Services</b>').</span></p>
+<p class="p3"><span class="s1">We are Bythos FZE, doing business as Oasis Defender ('<b>Company</b>','<b>we</b>', '<b>us</b>', or '<b>our</b>') a company registered in the United Arab Emirates at D-FLEX-G013D, Technohub, Dubai Silicon Oasis, Dubai, Dubai 0000. We operate the website <a href="https://saas.oasisdefender.com/"><span class="s2">https://saas.oasisdefender.com</span></a> (the '<b>Site</b>'), as well as any other related products and services that refer or link to this Policy (collectively, the '<b>Services</b>').</span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p4"><span class="s1"><b>USE OF THE SERVICES</b></span></p>
