--- a/terms/cookies.html
+++ b/terms/cookies.html
@@ -24,11 +24,11 @@
 <body>
 <p class="p1"><span class="s1"><b>COOKIE POLICY</b></span></p>
 <p class="p2"><span class="s1"></span><br></p>
-<p class="p3"><span class="s1"><b>Last updated March 20, 2024</b></span></p>
+<p class="p3"><span class="s1"><b>Last updated March 23, 2024</b></span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p2"><span class="s1"></span><br></p>
-<p class="p3"><span class="s1">This Cookie Policy explains how Bythos FZE ("<b>Company</b>," "<b>we</b>," "<b>us</b>," and "<b>our</b>") uses cookies and similar technologies to recognize you when you visit our website at  <a href="https://cloud.aws.oasisdefender.com/"><span class="s2">https://saas.oasisdefender.com</span></a> ("<b>Website</b>"). It explains what these technologies are and why we use them, as well as your rights to control our use of them.</span></p>
+<p class="p3"><span class="s1">This Cookie Policy explains how Bythos FZE ("<b>Company</b>," "<b>we</b>," "<b>us</b>," and "<b>our</b>") uses cookies and similar technologies to recognize you when you visit our website at  <a href="https://saas.oasisdefender.com/"><span class="s2">https://saas.oasisdefender.com</span></a> ("<b>Website</b>"). It explains what these technologies are and why we use them, as well as your rights to control our use of them.</span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1">In some cases we may use cookies to collect personal information, or that becomes personal information if we combine it with other information.</span></p>
 <p class="p2"><span class="s1"></span><br></p>
