--- a/terms/terms.html
+++ b/terms/terms.html
@@ -32,7 +32,7 @@
 <body>
 <p class="p1"><span class="s1"><b>TERMS OF SERVICE</b></span></p>
 <p class="p2"><span class="s1"></span><br></p>
-<p class="p3"><span class="s1"><b>Last updated</b> <b>March 20, 2024</b></span></p>
+<p class="p3"><span class="s1"><b>Last updated</b> <b>March 23, 2024</b></span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p2"><span class="s1"></span><br></p>
@@ -41,7 +41,7 @@
 <p class="p5"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1">We are Bythos FZE, doing business as Oasis Defender ('<b>Company</b>', '<b>we</b>', '<b>us</b>', or '<b>our</b>'), a company registered in the United Arab Emirates at D-FLEX-G013D, Technohub, Dubai Silicon Oasis, Dubai, Dubai 0000.</span></p>
 <p class="p5"><span class="s1"></span><br></p>
-<p class="p3"><span class="s1">We operate the website <a href="https://cloud.aws.oasisdefender.com/"><span class="s2">https://saas.oasisdefender.com</span></a> (the '<b>Site</b>'), as well as any other related products and services that refer or link to these legal terms (the '<b>Legal Terms</b>') (collectively, the '<b>Services</b>').</span></p>
+<p class="p3"><span class="s1">We operate the website <a href="https://saas.oasisdefender.com/"><span class="s2">https://saas.oasisdefender.com</span></a> (the '<b>Site</b>'), as well as any other related products and services that refer or link to these legal terms (the '<b>Legal Terms</b>') (collectively, the '<b>Services</b>').</span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1">Oasis Defender is a platform that collects information about the cloud infrastructure, cloud network structure, network settings and network security settings, visualises it in various formats, performs security analysis and provides recommendations for improving the cloud security.</span></p>
 <p class="p6"><span class="s1"></span><br></p>
@@ -282,7 +282,7 @@
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p4"><span class="s1"><b>14. PRIVACY POLICY</b></span></p>
 <p class="p2"><span class="s1"></span><br></p>
-<p class="p3"><span class="s1">We care about data privacy and security. Please review our Privacy Policy:<b> </b><a href="https://cloud.aws.oasisdefender.com/static/privacy.html"><span class="s2"><b>https://saas.oasisdefender.com/static/privacy.html</b></span></a>. By using the Services, you agree to be bound by our Privacy Policy, which is incorporated into these Legal Terms. Please be advised the Services are hosted in the United Arab Emirates and India. If you access the Services from any other region of the world with laws or other requirements governing personal data collection, use, or disclosure that differ from applicable laws in the United Arab Emirates and India, then through your continued use of the Services, you are transferring your data to the United Arab Emirates and India, and you expressly consent to have your data transferred to and processed in the United Arab Emirates and India.</span></p>
+<p class="p3"><span class="s1">We care about data privacy and security. Please review our Privacy Policy:<b> </b><a href="https://saas.oasisdefender.com/static/privacy.html"><span class="s2"><b>https://saas.oasisdefender.com/static/privacy.html</b></span></a>. By using the Services, you agree to be bound by our Privacy Policy, which is incorporated into these Legal Terms. Please be advised the Services are hosted in the United Arab Emirates and India. If you access the Services from any other region of the world with laws or other requirements governing personal data collection, use, or disclosure that differ from applicable laws in the United Arab Emirates and India, then through your continued use of the Services, you are transferring your data to the United Arab Emirates and India, and you expressly consent to have your data transferred to and processed in the United Arab Emirates and India.</span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p2"><span class="s1"></span><br></p>
