--- a/terms/disclaimer.html
+++ b/terms/disclaimer.html
@@ -22,12 +22,12 @@
 <p class="p1"><span class="s1"><b>DISCLAIMER</b></span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1"></span><br></p>
-<p class="p4"><span class="s1"><b>Last updated March 20, 2024</b></span></p>
+<p class="p4"><span class="s1"><b>Last updated March 23, 2024</b></span></p>
 <p class="p5"><span class="s1"></span><br></p>
 <p class="p5"><span class="s1"></span><br></p>
 <p class="p6"><span class="s1"><b>WEBSITE DISCLAIMER</b></span></p>
 <p class="p7"><span class="s1"></span><br></p>
-<p class="p4"><span class="s1">The information provided by Bythos FZE ('we', 'us', or 'our') on <a href="https://cloud.aws.oasisdefender.com/"><span class="s2">https://saas.oasisdefender.com</span></a> (the 'Site') is for general informational purposes only. All information on the Site is provided in good faith, however we make no representation or warranty of any kind, express or implied, regarding the accuracy, adequacy, validity, reliability, availability, or completeness of any information on the Site. UNDER NO CIRCUMSTANCE SHALL WE HAVE ANY LIABILITY TO YOU FOR ANY LOSS OR DAMAGE OF ANY KIND INCURRED AS A RESULT OF THE USE OF THE SITE OR RELIANCE ON ANY INFORMATION PROVIDED ON THE SITE. YOUR USE OF THE SITE AND YOUR RELIANCE ON ANY INFORMATION ON THE SITE IS SOLELY AT YOUR OWN RISK.</span></p>
+<p class="p4"><span class="s1">The information provided by Bythos FZE ('we', 'us', or 'our') on <a href="https://saas.oasisdefender.com/"><span class="s2">https://saas.oasisdefender.com</span></a> (the 'Site') is for general informational purposes only. All information on the Site is provided in good faith, however we make no representation or warranty of any kind, express or implied, regarding the accuracy, adequacy, validity, reliability, availability, or completeness of any information on the Site. UNDER NO CIRCUMSTANCE SHALL WE HAVE ANY LIABILITY TO YOU FOR ANY LOSS OR DAMAGE OF ANY KIND INCURRED AS A RESULT OF THE USE OF THE SITE OR RELIANCE ON ANY INFORMATION PROVIDED ON THE SITE. YOUR USE OF THE SITE AND YOUR RELIANCE ON ANY INFORMATION ON THE SITE IS SOLELY AT YOUR OWN RISK.</span></p>
 <p class="p7"><span class="s1"></span><br></p>
 <p class="p7"><span class="s1"></span><br></p>
 <p class="p6"><span class="s1"><b>EXTERNAL LINKS DISCLAIMER</b></span></p>
