--- a/terms/privacy.html
+++ b/terms/privacy.html
@@ -44,7 +44,7 @@
 <body>
 <p class="p1"><span class="s1"><b>PRIVACY POLICY</b></span></p>
 <p class="p2"><span class="s1"></span><br></p>
-<p class="p3"><span class="s1"><b>Last updated August 07, 2024</b></span></p>
+<p class="p3"><span class="s1"><b>Last updated August 20, 2024</b></span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p2"><span class="s1"></span><br></p>
@@ -141,17 +141,17 @@
 <p class="p3"><span class="s1"><b><i>In Short: </i></b><i>Some information â€” such as your Internet Protocol (IP) address and/or browser and device characteristics â€” is collected automatically when you visit our Services.</i></span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1">We automatically collect certain information when you visit, use, or navigate the Services. This information does not reveal your specific identity (like your name or contact information) but may include device and usage information, such as your IP address, browser and device characteristics, operating system, language preferences, referring URLs, device name, country, location, information about how and when you use our Services, and other technical information. This information is primarily needed to maintain the security and operation of our Services, and for our internal analytics and reporting purposes.</span></p>
-<p class="p2"><span class="s1"></span><br></p>
-<p class="p2"><span class="s1"></span><br></p>
+<p class="p8"><span class="s1"></span><br></p>
+<p class="p9"><span class="s1">We use Hotjar in order to better understand our users’ needs and to optimize this service and experience. Hotjar is a technology service that helps us better understand our users’ experience (e.g. how much time they spend on which pages, which links they choose to click, what users do and don’t like, etc.) and this enables us to build and maintain our service with user feedback. Hotjar uses cookies and other technologies to collect data on our users’ behavior and their devices. This includes a device's IP address (processed during your session and stored in a de-identified form), device screen size, device type (unique device identifiers), browser information, geographic location (country only), and the preferred language used to display our website. Hotjar stores this information on our behalf in a pseudonymized user profile. Hotjar is contractually forbidden to sell any of the data collected on our behalf.</span></p>
+<p class="p9"><span class="s1">For further details, please see the ‘about Hotjar’ section of <a href="https://help.hotjar.com/hc/en-us/categories/115001323967-About-Hotjar"><span class="s6">Hotjar’s support site</span></a>.</span></p>
 <p class="p3"><span class="s1">Like many businesses, we also collect information through cookies and similar technologies. You can find out more about this in our Cookie Notice: <a href="https://saas.oasisdefender.com/static/cookies.html"><span class="s3">https://saas.oasisdefender.com/static/cookies.html</span></a>.</span></p>
-<p class="p2"><span class="s1"></span><br></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1">The information we collect includes:</span></p>
 <ul class="ul1">
   <li class="li3"><span class="s2"><i></i></span><span class="s1"><i>Log and Usage Data.</i> Log and usage data is service-related, diagnostic, usage, and performance information our servers automatically collect when you access or use our Services and which we record in log files. Depending on how you interact with us, this log data may include your IP address, device information, browser type, and settings and information about your activity in the Services (such as the date/time stamps associated with your usage, pages and files viewed, searches, and other actions you take such as which features you use), device event information (such as system activity, error reports (sometimes called 'crash dumps'), and hardware settings).</span></li>
 </ul>
 <p class="p2"><span class="s1"></span><br></p>
-<p class="p9"><span class="s1"><b>2. HOW DO WE PROCESS YOUR INFORMATION?</b></span></p>
+<p class="p10"><span class="s1"><b>2. HOW DO WE PROCESS YOUR INFORMATION?</b></span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1"><b><i>In Short: </i></b><i>We process your information to provide, improve, and administer our Services, communicate with you, for security and fraud prevention, and to comply with law. We may also process your information for other purposes with your consent.</i></span></p>
 <p class="p2"><span class="s1"></span><br></p>
@@ -271,7 +271,7 @@
 </ul>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p2"><span class="s1"></span><br></p>
-<p class="p9"><span class="s1"><b>4. WHEN AND WITH WHOM DO WE SHARE YOUR PERSONAL INFORMATION?</b></span></p>
+<p class="p10"><span class="s1"><b>4. WHEN AND WITH WHOM DO WE SHARE YOUR PERSONAL INFORMATION?</b></span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1"><b><i>In Short:</i></b><i> We may share information in specific situations described in this section and/or with the following third parties.</i></span></p>
 <p class="p2"><span class="s1"></span><br></p>
@@ -283,13 +283,13 @@
 </ul>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p2"><span class="s1"></span><br></p>
-<p class="p9"><span class="s1"><b>5. DO WE USE COOKIES AND OTHER TRACKING TECHNOLOGIES?</b></span></p>
+<p class="p10"><span class="s1"><b>5. DO WE USE COOKIES AND OTHER TRACKING TECHNOLOGIES?</b></span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1"><b><i>In Short:</i></b><i> We may use cookies and other tracking technologies to collect and store your information.</i></span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1">We may use cookies and similar tracking technologies (like web beacons and pixels) to access or store information. Specific information about how we use such technologies and how you can refuse certain cookies is set out in our Cookie Notice: <a href="https://saas.oasisdefender.com/static/cookies.html"><span class="s3">https://saas.oasisdefender.com/static/cookies.html</span></a>.</span></p>
 <p class="p2"><span class="s1"></span><br></p>
-<p class="p9"><span class="s1"><b>6. HOW DO WE HANDLE YOUR SOCIAL LOGINS?</b></span></p>
+<p class="p10"><span class="s1"><b>6. HOW DO WE HANDLE YOUR SOCIAL LOGINS?</b></span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1"><b><i>In Short: </i></b><i>If you choose to register or log in to our Services using a social media account, we may have access to certain information about you.</i></span></p>
 <p class="p2"><span class="s1"></span><br></p>
@@ -297,7 +297,7 @@
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1">We will use the information we receive only for the purposes that are described in this privacy notice or that are otherwise made clear to you on the relevant Services. Please note that we do not control, and are not responsible for, other uses of your personal information by your third-party social media provider. We recommend that you review their privacy notice to understand how they collect, use, and share your personal information, and how you can set your privacy preferences on their sites and apps.</span></p>
 <p class="p2"><span class="s1"></span><br></p>
-<p class="p9"><span class="s1"><b>7. IS YOUR INFORMATION TRANSFERRED INTERNATIONALLY?</b></span></p>
+<p class="p10"><span class="s1"><b>7. IS YOUR INFORMATION TRANSFERRED INTERNATIONALLY?</b></span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1"><b><i>In Short: </i></b><i>We may transfer, store, and process your information in countries other than your own.</i></span></p>
 <p class="p2"><span class="s1"></span><br></p>
@@ -305,7 +305,7 @@
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1">If you are a resident in the European Economic Area (EEA), United Kingdom (UK), or Switzerland, then these countries may not necessarily have data protection laws or other similar laws as comprehensive as those in your country. However, we will take all necessary measures to protect your personal information in accordance with this privacy notice and applicable law.</span></p>
 <p class="p2"><span class="s1"></span><br></p>
-<p class="p9"><span class="s1"><b>8. HOW LONG DO WE KEEP YOUR INFORMATION?</b></span></p>
+<p class="p10"><span class="s1"><b>8. HOW LONG DO WE KEEP YOUR INFORMATION?</b></span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1"><b><i>In Short: </i></b><i>We keep your information for as long as necessary to fulfil the purposes outlined in this privacy notice unless otherwise required by law.</i></span></p>
 <p class="p2"><span class="s1"></span><br></p>
@@ -313,19 +313,19 @@
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1">When we have no ongoing legitimate business need to process your personal information, we will either delete or anonymise such information, or, if this is not possible (for example, because your personal information has been stored in backup archives), then we will securely store your personal information and isolate it from any further processing until deletion is possible.</span></p>
 <p class="p2"><span class="s1"></span><br></p>
-<p class="p9"><span class="s1"><b>9. HOW DO WE KEEP YOUR INFORMATION SAFE?</b></span></p>
+<p class="p10"><span class="s1"><b>9. HOW DO WE KEEP YOUR INFORMATION SAFE?</b></span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1"><b><i>In Short: </i></b><i>We aim to protect your personal information through a system of organisational and technical security measures.</i></span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1">We have implemented appropriate and reasonable technical and organisational security measures designed to protect the security of any personal information we process. However, despite our safeguards and efforts to secure your information, no electronic transmission over the Internet or information storage technology can be guaranteed to be 100% secure, so we cannot promise or guarantee that hackers, cybercriminals, or other unauthorised third parties will not be able to defeat our security and improperly collect, access, steal, or modify your information. Although we will do our best to protect your personal information, transmission of personal information to and from our Services is at your own risk. You should only access the Services within a secure environment.</span></p>
 <p class="p2"><span class="s1"></span><br></p>
-<p class="p9"><span class="s1"><b>10. DO WE COLLECT INFORMATION FROM MINORS?</b></span></p>
+<p class="p10"><span class="s1"><b>10. DO WE COLLECT INFORMATION FROM MINORS?</b></span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1"><b><i>In Short:</i></b><i> We do not knowingly collect data from or market to children under 18 years of age.</i></span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1">We do not knowingly solicit data from or market to children under 18 years of age. By using the Services, you represent that you are at least 18 or that you are the parent or guardian of such a minor and consent to such minor dependentâ€™s use of the Services. If we learn that personal information from users less than 18 years of age has been collected, we will deactivate the account and take reasonable measures to promptly delete such data from our records. If you become aware of any data we may have collected from children under age 18, please contact us at privacy@oasisdefender.com.</span></p>
 <p class="p2"><span class="s1"></span><br></p>
-<p class="p9"><span class="s1"><b>11. WHAT ARE YOUR PRIVACY RIGHTS?</b></span></p>
+<p class="p10"><span class="s1"><b>11. WHAT ARE YOUR PRIVACY RIGHTS?</b></span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1"><b><i>In Short:</i></b><i> In some regions, such as the European Economic Area (EEA), United Kingdom (UK), Switzerland, and Canada, you have rights that allow you greater access to and control over your personal information. You may review, change, or terminate your account at any time.</i></span></p>
 <p class="p2"><span class="s1"></span><br></p>
@@ -354,11 +354,11 @@
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1">If you have questions or comments about your privacy rights, you may email us at privacy@oasisdefender.com.</span></p>
 <p class="p2"><span class="s1"></span><br></p>
-<p class="p9"><span class="s1"><b>12. CONTROLS FOR DO-NOT-TRACK FEATURES</b></span></p>
+<p class="p10"><span class="s1"><b>12. CONTROLS FOR DO-NOT-TRACK FEATURES</b></span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1">Most web browsers and some mobile operating systems and mobile applications include a Do-Not-Track ('DNT') feature or setting you can activate to signal your privacy preference not to have data about your online browsing activities monitored and collected. At this stage no uniform technology standard for recognising and implementing DNT signals has been finalised. As such, we do not currently respond to DNT browser signals or any other mechanism that automatically communicates your choice not to be tracked online. If a standard for online tracking is adopted that we must follow in the future, we will inform you about that practice in a revised version of this privacy notice.</span></p>
 <p class="p2"><span class="s1"></span><br></p>
-<p class="p9"><span class="s1"><b>13. DO UNITED STATES RESIDENTS HAVE SPECIFIC PRIVACY RIGHTS?</b></span></p>
+<p class="p10"><span class="s1"><b>13. DO UNITED STATES RESIDENTS HAVE SPECIFIC PRIVACY RIGHTS?</b></span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1"><b><i>In Short: </i></b><i>If you are a resident of , you are granted specific rights regarding access to your personal information.</i></span></p>
 <p class="p2"><span class="s1"></span><br></p>
@@ -603,13 +603,13 @@
 <p class="p15"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1">Oasis Defender operates by requiring a dedicated role within each user's cloud environment. This role is specifically configured to collect only the information necessary for Oasis Defender to function. 1. Limited Permissions: The permissions assigned to this role are carefully restricted to ensure that only essential data is accessed. We prioritise your privacy and data security, and therefore limit our data collection to what is strictly necessary to provide our services. 2. Transparency in Permissions: For a detailed understanding of the specific permissions required, users can refer to our documentation, which is tailored to each cloud provider. This information is available at <a href="https://github.com/OasisDefender/OasisUsersCreation."><span class="s3">https://github.com/OasisDefender/OasisUsersCreation.</span></a> We encourage users to review these details to understand the scope of data access. 3. Commitment to Data Security: We are committed to maintaining the highest standards of data security and privacy. The data collected through this dedicated cloud role will be managed in accordance with our comprehensive privacy policy.</span></p>
 <p class="p2"><span class="s1"></span><br></p>
-<p class="p9"><span class="s1"><b>16. DO WE MAKE UPDATES TO THIS NOTICE?</b></span></p>
+<p class="p10"><span class="s1"><b>16. DO WE MAKE UPDATES TO THIS NOTICE?</b></span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1"><b><i>In Short: </i></b><i>Yes, we will update this notice as necessary to stay compliant with relevant laws.</i></span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1">We may update this privacy notice from time to time. The updated version will be indicated by an updated 'Revised' date and the updated version will be effective as soon as it is accessible. If we make material changes to this privacy notice, we may notify you either by prominently posting a notice of such changes or by directly sending you a notification. We encourage you to review this privacy notice frequently to be informed of how we are protecting your information.</span></p>
 <p class="p2"><span class="s1"></span><br></p>
-<p class="p9"><span class="s1"><b>17. HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</b></span></p>
+<p class="p10"><span class="s1"><b>17. HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</b></span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1">If you have questions or comments about this notice, you may email us at privacy@oasisdefender.com or contact us by post at:</span></p>
 <p class="p2"><span class="s1"></span><br></p>
@@ -618,7 +618,7 @@
 <p class="p3"><span class="s1">Dubai, Dubai 0000</span></p>
 <p class="p3"><span class="s1">United Arab Emirates</span></p>
 <p class="p2"><span class="s1"></span><br></p>
-<p class="p9"><span class="s1"><b>18. HOW CAN YOU REVIEW, UPDATE, OR DELETE THE DATA WE COLLECT FROM YOU?</b></span></p>
+<p class="p10"><span class="s1"><b>18. HOW CAN YOU REVIEW, UPDATE, OR DELETE THE DATA WE COLLECT FROM YOU?</b></span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1">Based on the applicable laws of your country, you may have the right to request access to the personal information we collect from you, change that information, or delete it. To request to review, update, or delete your personal information, please visit: <a href="https://saas.oasisdefender.com/account"><span class="s3">https://saas.oasisdefender.com/account</span></a>.</span></p>
 </body>
